add logout endpoint, add comments to exported functions
